# api-rust

./: Cargo.toml  diesel.toml  docker-compose.yml
migrations/2024-03-14-203744_admin/: down.sql  up.sql
src/: main.rs
src/server/: controller.rs  data.rs  mod.rs  model.rs  repository.rs  schema.rs
